[gd_scene load_steps=14 format=3 uid="uid://cgjt73ot3l62u"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7cj20"]
[ext_resource type="PackedScene" uid="uid://bvmiw2n5aicnb" path="res://scenes/player.tscn" id="1_k0qsd"]
[ext_resource type="Texture2D" uid="uid://cv403ou35vrw8" path="res://sprites/tileset.png" id="1_lmvuy"]
[ext_resource type="Script" path="res://scripts/Bullet_Manager.gd" id="3_7ovpd"]
[ext_resource type="Texture2D" uid="uid://c1yhnbe3ugk43" path="res://sprites/new_tileset.png" id="3_p3p08"]
[ext_resource type="PackedScene" uid="uid://dkn03an65lxsj" path="res://scenes/enemy_spawner.tscn" id="4_drhsg"]
[ext_resource type="PackedScene" uid="uid://ckvejgx60801" path="res://scenes/bullet.tscn" id="4_ly4nn"]
[ext_resource type="PackedScene" uid="uid://b7jwpng8gnx51" path="res://scenes/game_over.tscn" id="4_u2yja"]
[ext_resource type="PackedScene" uid="uid://do2pew3p4ttcg" path="res://scenes/HUD.tscn" id="6_4jyrd"]
[ext_resource type="Texture2D" uid="uid://phulckyt5ior" path="res://sprites/blood-background-rinrosk-deviantart-13.jpg" id="9_q2afl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oy2eo"]
texture = ExtResource("1_lmvuy")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -0.625, -8, -1)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.625, -8, -0.125, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.125, -8, 8, -8, 8, 8, 2.375, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.625, 8, 0.75, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_34glj"]
texture = ExtResource("3_p3p08")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -2.375, -8, -2.375)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 2.25, 8, 1.875, -8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 2.375, 8, 8, -8, 8, -8, 2.25)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, -2.125, 8, -1.875, -8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_qnged"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_oy2eo")
sources/1 = SubResource("TileSetAtlasSource_34glj")

[node name="Main" type="Node2D"]
script = ExtResource("1_7cj20")

[node name="TileMap" type="TileMap" parent="." groups=["World"]]
z_index = 1
tile_set = SubResource("TileSet_qnged")
format = 2
layer_0/tile_data = PackedInt32Array(1638400, 196609, 0, 1703936, 196609, 0, 1769472, 196609, 0, 1835008, 196609, 0, 1900544, 196609, 0, 1966080, 196609, 0, 2031616, 196609, 0, 2097152, 196609, 0, 2162688, 196609, 0, 2228224, 196609, 0, 2293760, 196609, 0, 2359296, 196609, 0, 2424832, 196609, 0, 2490368, 196609, 0, 2555904, 262145, 1, 2555905, 131073, 0, 2555906, 131073, 0, 2555907, 131073, 0, 2555908, 131073, 0, 2555909, 131073, 0, 2555910, 131073, 0, 2555911, 131073, 0, 2555912, 131073, 0, 2555913, 131073, 0, 2555914, 131073, 0, 2555915, 131073, 0, 2555916, 131073, 0, 2555917, 131073, 0, 2555918, 131073, 0, 2555919, 131073, 0, 2555920, 131073, 0, 2555921, 131073, 0, 2555922, 131073, 0, 2555942, 131073, 0, 2555943, 131073, 0, 2555944, 131073, 0, 2555945, 131073, 0, 2555946, 131073, 0, 2555947, 131073, 0, 2555948, 131073, 0, 2555949, 131073, 0, 2555950, 131073, 0, 2555951, 131073, 0, 2555952, 131073, 0, 2555953, 131073, 0, 2555954, 131073, 0, 2555955, 131073, 0, 2555956, 131073, 0, 2555957, 131073, 0, 2555958, 131073, 0, 2555959, 131073, 0, 2555960, 131073, 0, 2555961, 131073, 0, 2555962, 131073, 0, 2555963, 131073, 0, 2555964, 131073, 0, 2555965, 131073, 0, 2555966, 131073, 0, 2555967, 131073, 0, 2555968, 131073, 0, 2555969, 131073, 0, 2555970, 131073, 0, 2555971, 131073, 0, 2555972, 131073, 0, 2555973, 131073, 0, 2555974, 131073, 0, 2555975, 131073, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 65, 1, 0, 66, 1, 0, 67, 1, 0, 68, 1, 0, 69, 1, 0, 70, 1, 0, 71, 1, 0, 131072, 196609, 0, 65536, 196609, 0, 196608, 196609, 0, 262144, 196609, 0, 327680, 196609, 0, 393216, 196609, 0, 458752, 196609, 0, 524288, 196609, 0, 589824, 196609, 0, 655360, 196609, 0, 720896, 196609, 0, 786432, 196609, 0, 851968, 196609, 0, 917504, 196609, 0, 0, 262145, 0, 65608, 65537, 0, 131144, 65537, 0, 196680, 65537, 0, 262216, 65537, 0, 327752, 65537, 0, 393288, 65537, 0, 458824, 65537, 0, 524360, 65537, 0, 589896, 65537, 0, 655432, 65537, 0, 720968, 65537, 0, 786504, 65537, 0, 852040, 65537, 0, 917576, 65537, 0, 1966152, 65537, 0, 2031688, 65537, 0, 2424904, 65537, 0, 2490440, 65537, 0, 2555976, 327681, 1, 2097224, 65537, 0, 2162760, 65537, 0, 2228296, 65537, 0, 2293832, 65537, 0, 2359368, 65537, 0, 72, 327681, 0)

[node name="Player" parent="." instance=ExtResource("1_k0qsd")]
position = Vector2(563, 326)

[node name="Bullet_Manager" type="Node2D" parent="."]
script = ExtResource("3_7ovpd")
Bullet_scene = ExtResource("4_ly4nn")

[node name="Enemy_Spawner" parent="." instance=ExtResource("4_drhsg")]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="Wave_Timer" type="Timer" parent="."]
process_mode = 2
one_shot = true

[node name="PreNewWaveTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.2

[node name="Hud" parent="." instance=ExtResource("6_4jyrd")]

[node name="WavesLabel" parent="Hud" index="5"]
offset_left = 487.0
offset_top = 293.0
offset_right = 656.0
offset_bottom = 358.0

[node name="GameOver" parent="." instance=ExtResource("4_u2yja")]
process_mode = 2
visible = false

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -7.0
offset_top = -1.0
offset_right = 1167.0
offset_bottom = 644.0
texture = ExtResource("9_q2afl")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(584, 320)

[connection signal="shoot" from="Player" to="Bullet_Manager" method="_on_player_shoot"]
[connection signal="explode_p" from="Enemy_Spawner" to="Player" method="_on_enemy_spawner_explode_p"]
[connection signal="hit_p" from="Enemy_Spawner" to="Player" method="_on_enemy_spawner_hit_p"]
[connection signal="timeout" from="Wave_Timer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="PreNewWaveTimer" to="." method="_on_pre_new_wave_timer_timeout"]
[connection signal="pressed" from="GameOver/PlayAgain" to="." method="_on_play_again_pressed"]

[editable path="Hud"]
[editable path="GameOver"]
